--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,4 +1,5 @@
 {
+  "remoteUser": "vscode",
   "name": "CityGrid Development",
   "image": "mcr.microsoft.com/devcontainers/javascript-node:1-18-bullseye",
   "features": {
